--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
         
       # Docker Hub push
       - name: DockerHub Push
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.PROJECT_NAME }}
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}:${{ secrets.PROJECT_NAME }}
 
  
       - name: Pull and restart Docker Container
