--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,9 +70,6 @@ jobs:
           push: true
           tags: cuptea-client:version1.0.0
         
-      # # Docker Hub push
-      # - name: DockerHub Push
-      #   run: docker push ${{ secrets.DOCKERHUB_USERNAME }}:cuptea-client
 
  
       - name: Pull and restart Docker Container
@@ -82,11 +79,11 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           script: |
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/${{secrets.PROJECT_NAME}}
+            docker pull ${{ secrets.PROJECT_NAME }}:version1.0.0
             sudo docker rm -f ${{ secrets.PROJECT_NAME }}
-            sudo docker rmi ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.PROJECT_NAME }}
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.PROJECT_NAME }} 
+            sudo docker rmi ${{ secrets.PROJECT_NAME }}:version1.0.0
+            sudo docker pull ${{ secrets.PROJECT_NAME }}:version1.0.0 
 
             sudo docker run -p ${{ secrets.PORT }}:${{ secrets.PORT }} \
             --name ${{ secrets.PROJECT_NAME }} \
-            -d ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.PROJECT_NAME }}
+            -d ${{ secrets.PROJECT_NAME }}:version1.0.0
