--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,11 +79,11 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           script: |
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.PROJECT_NAME }}:latest
-            sudo docker rm -f ${{ secrets.PROJECT_NAME }}
-            sudo docker rmi ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.PROJECT_NAME }}:latest
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.PROJECT_NAME }}:latest
+            docker pull sgwonbe212359/${{ secrets.PROJECT_NAME }}:latest
+            sudo docker rm -f sgwonbe212359/${{ secrets.PROJECT_NAME }}:latest
+            sudo docker rmi sgwonbe212359/${{ secrets.PROJECT_NAME }}:latest
+            sudo docker pull sgwonbe212359/${{ secrets.PROJECT_NAME }}:latest
 
             sudo docker run -p ${{ secrets.PORT }}:${{ secrets.PORT }} \
-            --name ${{ secrets.PROJECT_NAME }} \
-            -d ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.PROJECT_NAME }}:latest
+            --name sgwonbe212359/${{ secrets.PROJECT_NAME }}:latest \
+            -d sgwonbe212359/${{ secrets.PROJECT_NAME }}:latest
