--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,10 +80,10 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           script: |
             docker pull sgwonbe212359/${{ secrets.PROJECT_NAME }}:latest
-            sudo docker rm -f ${{ secrets.PROJECT_NAME }}:latest
+            sudo docker rm -f ${{ secrets.PROJECT_NAME }}
             sudo docker rmi sgwonbe212359/${{ secrets.PROJECT_NAME }}:latest
             sudo docker pull sgwonbe212359/${{ secrets.PROJECT_NAME }}:latest
 
             sudo docker run -p ${{ secrets.PORT }}:${{ secrets.PORT }} \
-            --name ${{ secrets.PROJECT_NAME }}:latest \
+            --name ${{ secrets.PROJECT_NAME }} \
             -d sgwonbe212359/${{ secrets.PROJECT_NAME }}:latest
