--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -1,3 +1,12 @@
+http {
+    include     mime.types;
+    default_type  application/octet-stream;
+
+    types {
+        application/javascript js
+    }
+}
+
 server {
     listen 80;
 
