--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -1,11 +1,11 @@
-http {
-    include     mime.types;
-    default_type  application/octet-stream;
+# http {
+#     include     mime.types;
+#     default_type  application/octet-stream;
 
-    types {
-        application/javascript js
-    }
-}
+#     types {
+#         application/javascript js
+#     }
+# }
 
 server {
     listen 80;
