--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,13 +62,21 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       # Docker 이미지 빌드
-      - name: Build and push
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.EC2_HOST }}:5000/${{ secrets.PROJECT_NAME }}:latest
+
+      - name: Build docker image
+        run: docker build . -- file Dockerfile -- tag ${{ secrets.EC2_HOST }}:5000/${{ secrets.PROJECT_NAME }}:latest
+      
+        # Docker 이미지 Push
+      - name: Push docker image
+        run: docker push ${{ secrets.EC2_HOST }}:5000/${{ secrets.PROJECT_NAME }}:latest
+
+      # - name: Build and push
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     context: .
+      #     file: ./Dockerfile
+      #     push: true
+      #     tags: ${{ secrets.EC2_HOST }}:5000/${{ secrets.PROJECT_NAME }}:latest
         
 
  
