--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,7 +75,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.EC2_HOST }}:5000/${{ secrets.PROJECT_NAME }}:latest
+          tags: sgwonbe212359/${{ secrets.PROJECT_NAME }}:latest
         
 
  
@@ -86,11 +86,11 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           script: |
-            docker pull ${{ secrets.EC2_HOST }}:5000/${{ secrets.PROJECT_NAME }}:latest
+            docker pull sgwonbe212359/${{ secrets.PROJECT_NAME }}:latest
             sudo docker rm -f ${{ secrets.PROJECT_NAME }}
-            sudo docker rmi ${{ secrets.EC2_HOST }}:5000/${{ secrets.PROJECT_NAME }}:latest
-            sudo docker pull ${{ secrets.EC2_HOST }}:5000/${{ secrets.PROJECT_NAME }}:latest
+            sudo docker rmi sgwonbe212359/${{ secrets.PROJECT_NAME }}:latest
+            sudo docker pull sgwonbe212359${{ secrets.PROJECT_NAME }}:latest
 
             sudo docker run -p ${{ secrets.PORT }}:${{ secrets.PORT }} \
             --name ${{ secrets.PROJECT_NAME }} \
-            -d ${{ secrets.EC2_HOST }}:5000/${{ secrets.PROJECT_NAME }}:latest
+            -d sgwonbe212359/${{ secrets.PROJECT_NAME }}:latest
