--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,9 +49,14 @@ jobs:
 
       - name: Build
         run: npm run build
-        
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+        with:
+          config-inline: |
+              [${{ secrets.EC2_HOST }}:5000]
+                http = true
+                insecure = true
 
       # https://docs.docker.com/build/ci/github-actions/#step-three-define-the-workflow-steps
       # Docker에 연결하여 이미지를 빌드하고 Hub에 푸시한다.
@@ -75,7 +80,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: sgwonbe212359/${{ secrets.PROJECT_NAME }}:latest
+          tags: ${{secrets.EC2_HOST}}:5000/${{ secrets.PROJECT_NAME }}:latest
         
 
  
@@ -86,11 +91,11 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           script: |
-            docker pull sgwonbe212359/${{ secrets.PROJECT_NAME }}:latest
+            docker pull ${{secrets.EC2_HOST}}:5000/${{ secrets.PROJECT_NAME }}:latest
             sudo docker rm -f ${{ secrets.PROJECT_NAME }}
-            sudo docker rmi sgwonbe212359/${{ secrets.PROJECT_NAME }}:latest
-            sudo docker pull sgwonbe212359${{ secrets.PROJECT_NAME }}:latest
+            sudo docker rmi ${{secrets.EC2_HOST}}:5000/${{ secrets.PROJECT_NAME }}:latest
+            sudo docker pull ${{secrets.EC2_HOST}}:5000${{ secrets.PROJECT_NAME }}:latest
 
             sudo docker run -p ${{ secrets.PORT }}:${{ secrets.PORT }} \
             --name ${{ secrets.PROJECT_NAME }} \
-            -d sgwonbe212359/${{ secrets.PROJECT_NAME }}:latest
+            -d ${{secrets.EC2_HOST}}:5000/${{ secrets.PROJECT_NAME }}:latest
