--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Insecure Docker Repository
         run: |
           sudo truncate -s-2 /etc/docker/daemon.json
-          echo ", \"insecure-registries\": [\"${{ secrets.EC2_HOST}}\"]}" | sudo tee -a /etc/docker/daemon.json
+          echo ", \"insecure-registries\": [\"${{ secrets.EC2_HOST }}:5000\"]}" | sudo tee -a /etc/docker/daemon.json
           sudo systemctl restart docker
 
       # https://docs.docker.com/build/ci/github-actions/#step-three-define-the-workflow-steps
