config nginx && gihub actions

--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -1,11 +1,7 @@
-# http {
-#     include     mime.types;
-#     default_type  application/octet-stream;
-
-#     types {
-#         application/javascript js
-#     }
+# upstream cuptea-service {
+#   server 52.79.137.212:9090
 # }
+
 
 server {
     listen 80;
@@ -15,4 +11,8 @@ server {
         index index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
+
+    # location /service-api/ {
+    #     proxy_pass http://cuptea-service;
+    # }
 }
