--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,7 @@ jobs:
         run: |
           sudo truncate -s-2 /etc/docker/daemon.json
           echo ", \"insecure-registries\": [\"${{ secrets.EC2_HOST }}:5000\"]}" | sudo tee -a /etc/docker/daemon.json
+          # systemctl restart docker
 
       # https://docs.docker.com/build/ci/github-actions/#step-three-define-the-workflow-steps
       # Docker에 연결하여 이미지를 빌드하고 Hub에 푸시한다.
