--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
         run: |
           sudo truncate -s-2 /etc/docker/daemon.json
           echo ", \"insecure-registries\": [\"${{ secrets.EC2_HOST }}:5000\"]}" | sudo tee -a /etc/docker/daemon.json
-          systemctl restart docker
+          sudo systemctl restart docker
 
       # https://docs.docker.com/build/ci/github-actions/#step-three-define-the-workflow-steps
       # Docker에 연결하여 이미지를 빌드하고 Hub에 푸시한다.
@@ -97,3 +97,6 @@ jobs:
             sudo docker run -p ${{ secrets.PORT }}:${{ secrets.PORT }} \
             --name ${{ secrets.PROJECT_NAME }} \
             -d ${{secrets.EC2_HOST}}:5000/${{ secrets.PROJECT_NAME }}:latest
+
+
+            # 백엔드 도커 이미지도 재실행해야함!!
