github actions config update

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,7 +96,6 @@ jobs:
 
             sudo docker run -p ${{ secrets.PORT }}:${{ secrets.PORT }} \
             --name ${{ secrets.PROJECT_NAME }} \
+            --restart=always \ 
             -d ${{secrets.EC2_HOST}}:5000/${{ secrets.PROJECT_NAME }}:latest
 
-
-            # 백엔드 도커 이미지도 재실행해야함!!
