--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,6 +93,8 @@ jobs:
             sudo docker rm -f ${{ secrets.PROJECT_NAME }}
             sudo docker rmi ${{secrets.EC2_HOST}}:5000/${{ secrets.PROJECT_NAME }}:latest
             sudo docker pull ${{secrets.EC2_HOST}}:5000${{ secrets.PROJECT_NAME }}:latest
+
+            sudo docker restart ${{ secrets.BACKEND_PROJECT_NAME }}
             
             sudo docker run -p ${{ secrets.PORT }}:${{ secrets.PORT }} \
             --name ${{ secrets.PROJECT_NAME }} \
