--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -1,5 +1,5 @@
 upstream cuptea-service {
-  server 52.79.137.212:9090
+  server 52.79.137.212:9090;
 }
 
 
@@ -12,7 +12,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /service-api/ {
+    location /service-api {
         proxy_pass http://cuptea-service;
     }
 }
