--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -12,7 +12,18 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /service-api {
+    location /service-api/ {
+
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept';
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+
         proxy_pass http://cuptea-service;
     }
 }
