--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -16,13 +16,14 @@ server {
 
         if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PATCH, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept';
-            add_header 'Access-Control-Max-Age' 1728000;
-            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Access-Control-Max-Age' 86400;
             add_header 'Content-Length' 0;
             return 204;
         }
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Content-Type' 'application/json' always;
 
         proxy_pass http://cuptea-service;
     }
