--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -12,7 +12,12 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /service-api/, /oauth2/ {
+    location /service-api/ {
+
+        proxy_pass http://cuptea-service;
+    }
+
+    location /oauth2/ {
 
         proxy_pass http://cuptea-service;
     }
